--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@
     </tbody>
   </table>
 
+  <div class="input-section" style="margin-top: 20px;">
+    <label>Custom Distance</label>
+    <div class="pace-input">
+      <input type="number" id="custom-distance" min="1" placeholder="0" inputmode="numeric">
+      <span>meters</span>
+      <span style="margin-left: auto; font-size: 24px; color: #2563eb; font-weight: 600;" id="custom-split">--:--</span>
+    </div>
+  </div>
+
   <script>
     const METERS_PER_MILE = 1609.34;
     const distances = [200, 400, 800, 1000];
@@ -165,6 +174,8 @@
     const minutesInput = document.getElementById('minutes');
     const secondsInput = document.getElementById('seconds');
     const mphDisplay = document.getElementById('mph');
+    const customDistanceInput = document.getElementById('custom-distance');
+    const customSplitDisplay = document.getElementById('custom-split');
 
     function calculate() {
       const minutes = parseInt(minutesInput.value) || 0;
@@ -176,6 +187,7 @@
         distances.forEach(d => {
           document.getElementById(`split-${d}`).textContent = '--:--';
         });
+        customSplitDisplay.textContent = '--:--';
         return;
       }
 
@@ -193,10 +205,34 @@
         document.getElementById(`split-${distance}`).textContent =
           `${splitMins}:${splitSecs.toString().padStart(2, '0')}`;
       });
+
+      // Calculate custom distance
+      calculateCustom(secondsPerMeter);
+    }
+
+    function calculateCustom(secondsPerMeter) {
+      const customDistance = parseInt(customDistanceInput.value) || 0;
+      if (customDistance === 0 || !secondsPerMeter) {
+        customSplitDisplay.textContent = '--:--';
+        return;
+      }
+      const splitSeconds = secondsPerMeter * customDistance;
+      const splitMins = Math.floor(splitSeconds / 60);
+      const splitSecs = Math.round(splitSeconds % 60);
+      customSplitDisplay.textContent = `${splitMins}:${splitSecs.toString().padStart(2, '0')}`;
     }
 
     minutesInput.addEventListener('input', calculate);
     secondsInput.addEventListener('input', calculate);
+    customDistanceInput.addEventListener('input', () => {
+      const minutes = parseInt(minutesInput.value) || 0;
+      const seconds = parseInt(secondsInput.value) || 0;
+      const totalSeconds = minutes * 60 + seconds;
+      if (totalSeconds > 0) {
+        const secondsPerMeter = totalSeconds / METERS_PER_MILE;
+        calculateCustom(secondsPerMeter);
+      }
+    });
 
     // Register service worker for offline support
     if ('serviceWorker' in navigator) {
