Widen custom distance input

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <div class="input-section" style="margin-top: 20px;">
     <label>Custom Distance</label>
     <div class="pace-input">
-      <input type="number" id="custom-distance" min="1" placeholder="0" inputmode="numeric">
+      <input type="number" id="custom-distance" min="1" placeholder="0" inputmode="numeric" style="width: 120px;">
       <span>meters</span>
       <span style="margin-left: auto; font-size: 24px; color: #2563eb; font-weight: 600;" id="custom-split">--:--</span>
     </div>
