Remove 1 mile from splits table

--- a/index.html
+++ b/index.html
@@ -241,10 +241,6 @@
         <td class="distance">1000m</td>
         <td class="time" id="split-1000">--:--</td>
       </tr>
-      <tr>
-        <td class="distance">1 mile</td>
-        <td class="time" id="split-1609">--:--</td>
-      </tr>
     </tbody>
   </table>
 
@@ -278,7 +274,7 @@
 
   <script>
     const METERS_PER_MILE = 1609.34;
-    const distances = [200, 400, 800, 1000, 1609];
+    const distances = [200, 400, 800, 1000];
 
     const minutesInput = document.getElementById('minutes');
     const secondsInput = document.getElementById('seconds');
